# django_skynetaccessibility_scanner

./: LICENSE  MANIFEST.in  README.md  setup.cfg
django_skynetaccessibility_scanner/: __init__.py  admin.py  apps.py  context_processors.py  models.py  urls.py  views.py
django_skynetaccessibility_scanner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
django_skynetaccessibility_scanner/migrations/: 0001_initial.py
django_skynetaccessibility_scanner/static/django_skynetaccessibility_scanner/admin/css/: skynet_admin.css
django_skynetaccessibility_scanner/static/django_skynetaccessibility_scanner/admin/js/: skynet_admin.js
django_skynetaccessibility_scanner/static/django_skynetaccessibility_scanner/css/: skynet_scanner.css
django_skynetaccessibility_scanner/static/django_skynetaccessibility_scanner/js/: skynet_scanner.js
django_skynetaccessibility_scanner/templates/django_skynetaccessibility_scanner/: admin_dashboard.html
