[metadata]
name = django_skynetaccessibility_scanner
version = 1.0.0
description = Scan, monitor, and identify website accessibility issues across WCAG 2.0, 2.1, 2.2, ADA, Section 508, EN 301 549, UK Equality Act, Australian DDA, and Canada ACA. Get simple issue highlights with recommended fixes.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.skynettechnologies.com
author = Skynet Technologies USA LLC
author_email = developer3@skynettechnologies.com
license = LGPL-3.0
classifiers = 
	Environment :: Web Environment
	Framework :: Django
	Framework :: Django :: 4.0
	Framework :: Django :: 4.1
	Framework :: Django :: 4.2
	Framework :: Django :: 5.0
	Framework :: Django :: 5.1
	Framework :: Django :: 5.2
	Framework :: Django :: 6.0
	License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
	Operating System :: OS Independent
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12
	Programming Language :: Python :: 3.13
	Topic :: Internet :: WWW/HTTP
	Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.10
install_requires = 
	Django>=4.0,<7.0

[options.packages.find]
exclude = 
	tests
	tests.*

[egg_info]
tag_build = 
tag_date = 0

